OOFSWIG/Tests/Errors/unterm_string.i
%module name
%{

%}

const char message = "Hello world
